RESOLVED FIXED270307
[Lockdown Mode] Lockdown Mode Safe Font feature flag gets stuck, cannot be enabled in some cases
https://bugs.webkit.org/show_bug.cgi?id=270307
Summary [Lockdown Mode] Lockdown Mode Safe Font feature flag gets stuck, cannot be en...
Félix Cloutier
Reported 2024-02-29 11:25:54 PST
Due to a logic error, when the Lockdown Mode Safe Font feature flag goes to `DownloadableBinaryFontTrustedTypes::Restricted` or `...::FallbackParser`, it gets stuck in that state and can't progress to the other. This makes the setting toggle ineffective. Lockdown Mode Safe Font was introduced by fixing https://bugs.webkit.org/show_bug.cgi?id=267948.
Attachments
Félix Cloutier
Comment 1 2024-02-29 14:40:18 PST
Félix Cloutier
Comment 2 2024-02-29 14:44:53 PST
EWS
Comment 3 2024-02-29 23:06:01 PST
Committed 275539@main (6ce61264b7ca): <https://commits.webkit.org/275539@main> Reviewed commits have been landed. Closing PR #25320 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.