[Lockdown Mode] Lockdown Mode Safe Font feature flag gets stuck, cannot be enabled in some cases

https://bugs.webkit.org/show_bug.cgi?id=270307
rdar://123848733

Reviewed by Brent Fulgham.

Due to a logic error, when the Lockdown Mode Safe Font feature flag goes to
`DownloadableBinaryFontTrustedTypes::Restricted` or `...::FallbackParser`, it
gets stuck in that state and can't progress to the other. This makes the
"Lockdown Mode Safe Font" setting toggle ineffective.

This change addresses the issue by allowing state transitions from any
`DownloadableBinaryFontTrustedTypes` state except `...::None`.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::adjustSettingsForLockdownMode):

Canonical link: https://commits.webkit.org/275539@main